@@ -283,7 +283,8 @@ Important recommendations:
 
 - For ideal results, examine the `interval_weights.png` file to find good
   off-target bin widths. You will need to re-run `IntervalFile.R` with the
-  `--offtargetwidth` parameter and re-calculate the coverages.
+  `--offtargetwidth` parameter and re-calculate the coverages. `NormalDB.R`
+  will also give a suggestion for a good width.
 
 - The `--assay` argument is optional and is only used to add the provided assay
   name to all output files
